--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,15 +16,17 @@
     "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
-    "angularfire": "^2.3.0",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.6.2",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
+    "ngx-gauge": "^1.0.0-beta.11",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -37,7 +39,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.1",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
